# vscode-api-expose-extension

./: .capi-breakpoints.banner.txt  .capi-breakpoints.json  .capi-debug-e2e.json  .gitignore  .vscodeignore  API.md  CHANGELOG.md  CLI_FILTERING.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  README.new.md  README_NEW.md  README_old.md  RESEARCH_PYTHON_EXTENSION_TOOL_EXPOSURE.md  VSCode-LM-API-Observability.md  VSCode-UI-API-Plan.md  capi-cli-API-Observability.md  install.sh  openapi.json  package-lock.json  package.json  package.json.d.ts  standalone-exec-with-action.js  test-demo.sh  test-output.txt  test-setup.sh  tsconfig.json  vscode-api-expose-0.0.6.vsix
.github/chatmodes/: capi.chatmode.md  demo.chatmode.md  vscode-api-exposure-expert.chatmode.md
capi-mcp-server/: DEEPCOG_REFACTOR_PLAN.md  REFERENCE.md  server.py
cli/: README.md  package-lock.json  package.json
contained-capi-mcp/capi-mcp-server/: FASTMCP_ANNOTATION_GUIDE.md  FASTMCP_ANNOTATION_GUIDE_FRIENDLY.md  README.md  demo_run_tools.py  pyproject.toml  run_mcp_tcp.py  server.py
contained-capi-mcp/capi-mcp-server/app/: tools.md  tools.py  vscode_api_client.py
contained-capi-mcp/capi-mcp-server/capi_mcp_server.egg-info/: requires.txt
docs/: DEBUG_API.md
extension-bridge/: README.md  README_DEV.md  package-lock.json  package.json  run_bridge_node.js  vscode-api-expose-bridge-0.0.1.vsix
scripts/: README-debug-e2e.md  complex_debug_me.js  debug_e2e_exec.js  debug_target.js  port-allocator-test.js  set_breakpoint_exec.js  validate_local_tool_api.sh
src/: extension.ts
terminal-mcp-server/: server.py
(+13 files in other folders)
